Big renderer refactor + switch to SDL2

--- a/meson.build
+++ b/meson.build
@@ -4,40 +4,23 @@ subdir('external')
 subdir('shaders')
 
 dependencies = [
-  dependency('glfw3'),
+  dependency('sdl2'),
   dependency('vulkan'),
   dependency('glm'),
   stb_image_dep,
   vma_dep
 ]
 
-sources = [
-  'src/main.cpp',
-
-  'src/app.cpp',
-
-  'src/instance.cpp',
-  'src/validation.cpp',
-  'src/extensions.cpp',
-  'src/surface.cpp',
-  'src/window.cpp',
-  'src/device.cpp',
-  'src/queue.cpp',
-  'src/sync.cpp',
-  'src/swapchain.cpp',
-  'src/drawing.cpp',
-  'src/commands.cpp',
-  'src/renderpass.cpp',
-  'src/framebuffer.cpp',
-  'src/shader.cpp',
-  'src/pipeline.cpp',
-  'src/buffers.cpp',
-  'src/image.cpp',
-  'src/descriptors.cpp',
+vkf_sources = [
+  'src/vulkan_backend.cpp',
+  'src/buffer_transfer.cpp',
+  'src/standard_material.cpp',
+  'src/mesh.cpp',
+  'src/main.cpp'
 ]
 
 executable(
   'vkf',
-  sources,
+  vkf_sources,
   dependencies: dependencies,
 )
