New project structure + window abstraction

--- a/meson.build
+++ b/meson.build
@@ -3,24 +3,5 @@ project('vkf', 'cpp', 'c')
 subdir('external')
 subdir('shaders')
 
-dependencies = [
-  dependency('sdl2'),
-  dependency('vulkan'),
-  dependency('glm'),
-  stb_image_dep,
-  vma_dep
-]
-
-vkf_sources = [
-  'src/vulkan_backend.cpp',
-  'src/buffer_transfer.cpp',
-  'src/standard_material.cpp',
-  'src/mesh.cpp',
-  'src/main.cpp'
-]
-
-executable(
-  'vkf',
-  vkf_sources,
-  dependencies: dependencies,
-)
+subdir('vkf')
+subdir('game')
