Rename VulkanBackend to VkContext and add more abstractions

--- a/external/vma/meson.build
+++ b/external/vma/meson.build
@@ -1,13 +1,18 @@
 vma_inc_dirs = include_directories('include')
 
+vma_dependencies = [
+  dependency('vulkan')
+]
+
 vma_lib = library(
   'vma',
   'vk_mem_alloc.cpp',
   include_directories: vma_inc_dirs,
-  dependencies: dependency('vulkan')
+  dependencies: vma_dependencies
 )
 
 vma_dep = declare_dependency(
   link_with: vma_lib,
-  include_directories: vma_inc_dirs
+  include_directories: vma_inc_dirs,
+  dependencies: vma_dependencies
 )
