--- a/vkf/meson.build
+++ b/vkf/meson.build
@@ -1,15 +1,21 @@
-vkf_inc_dirs = [
-  include_directories('.'),
-  vma_inc_dirs,
-  stb_image_inc_dirs
-]
+vkf_inc_dirs = include_directories('.')
 
 vkf_sources = [
-  'renderer/vulkan_backend.cpp',
-  'helper/buffer_transfer.cpp',
-  'material/standard_material.cpp',
   'window/window.cpp',
+
+  'renderer/vk_context.cpp',
+
   'framework/framework.cpp',
+
+  'buffer/buffer.cpp',
+  'buffer/staging_buffer.cpp',
+  'buffer/vertex_buffer.cpp',
+  'buffer/index_buffer.cpp',
+
+  'texture/texture.cpp',
+
+  'material/standard_material.cpp',
+
   'mesh/mesh.cpp',
 ]
 
@@ -24,11 +30,11 @@ vkf_dependencies = [
 vkf_lib = library(
   'vkf',
   vkf_sources,
-  dependencies: vkf_dependencies,
-  include_directories: vkf_inc_dirs
+  dependencies: vkf_dependencies
 )
 
 vkf_dep = declare_dependency(
   link_with: vkf_lib,
-  include_directories: vkf_inc_dirs
+  include_directories: vkf_inc_dirs,
+  dependencies: vkf_dependencies
 )
