Organize VkContext, add transient command buffers and window event listener

--- a/vkf/meson.build
+++ b/vkf/meson.build
@@ -14,6 +14,7 @@ vkf_sources = [
 
   'texture/texture.cpp',
 
+  'material/material.cpp',
   'material/standard_material.cpp',
 
   'mesh/mesh.cpp',
